--- a/style.css
+++ b/style.css
@@ -43,59 +43,54 @@ body {
 }
 
 /* Estilo para el contenedor de la imagen de la película */
-.movie-image {
-    width: 150px;
-    /* Ancho de la imagen */
-    overflow: hidden;
-    /* Evita que la imagen se desborde fuera del contenedor */
-}
-
-.movie-image img {
-    width: 100%;
-    /* Ajustar la imagen al ancho del contenedor */
-    height: auto;
-    /* Ajustar la altura proporcionalmente */
-}
-
-/* Estilo para las tarjetas de película */
+/* Estilos para las tarjetas de película */
 .movie-card {
-    width: calc(33.333333% - 120px);
-    /* Ancho de cada card, ocupando 33.33% del espacio disponible en la fila */
+    width: 180px;
+    /* Ancho de cada card */
+    height: 320px;
+    /* Altura de cada card */
     margin: 10px;
-    /* Espacio entre las cards */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease-in-out;
+    position: relative;
+    overflow: hidden;
 }
 
-.movie-card:hover {
-    transform: translateY(-5px);
+/* Estilos para el contenedor del póster de la película */
+.movie-image-container {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
-.movie-genre {
-    font-size: 14px;
-    font-weight: bold;
-    text-transform: uppercase;
-    color: #777;
+/* Estilos para la imagen de la película (póster) */
+.movie-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
-/* Estilos para el año de lanzamiento */
-.movie-release-date {
-    font-size: 12px;
-    color: #888;
-    margin-top: 5px;
+/* Estilos para el contenedor de la información de la película */
+.movie-info-container {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    padding: 8px;
+    opacity: 0;
+    transition: opacity 0.2s ease-in-out;
 }
 
-/* Animación para las estrellas de valoración */
-.movie-rating .fas,
-.movie-rating .far {
-    transition: color 0.2s ease-in-out;
+/* Estilos para mostrar la información al pasar el mouse por encima */
+.movie-card:hover .movie-info-container {
+    opacity: 1;
 }
 
-.movie-rating:hover .fas,
-.movie-rating:hover .far {
-    color: gold;
+.movie-card {
+    cursor: pointer;
 }
-
 /* Estilos para los botones */
 .btn {
     font-size: 14px;
